--- a/html/styles.css
+++ b/html/styles.css
@@ -1,103 +1,271 @@
-:root{
-    font-family: Quicksand, arial;
-    min-height: 100vh;
-    min-width: 1028px;
-    background-color: white;
-    margin: 0 auto;
+:root {
+  font-family: Quicksand, arial;
+  min-height: 100vh;
+  max-width: 1280px;
+  background-color: white;
+  margin: 0 auto;
 }
-body{
-    margin: 0px !important;
-    background-color: rgb(146, 90, 90);
-    border-radius: 1px grey;
+body {
+  margin: 0px !important;
+  background-color: white;
+  border: 1px solid #ddd;
 }
 .page-container {
+  margin-bottom: 70px;
+}
+.nav{
 
 }
 
-.nav {
-    background-color: greenyellow;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
+nav {
+  background-color: #222222;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 nav .logo {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-nav .logo img{
-width: 56px;
-height: 56px;
-padding: 8px;
-border-radius: 50%;
+nav .logo img {
+  width: 56px;
+  height: 56px;
+  padding: 8px;
+  border-radius: 50%;
 }
 nav .logo .title {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    padding-left: 20px;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding-left: 20px;
 }
 nav ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  list-style: none;
 }
 nav ul li {
-    color: white;
-    padding: 22px 40px;
-    background-color: #333333;
+  color: white;
+  padding: 22px 40px;
+  background-color: #333333;
 }
-nav ul li:hover{
-    background-color: #222222;
+nav ul li:hover {
+  background-color: #222222;
 }
 nav ul li.active {
-    background-color: #222222;
+  background-color: #222222;
 }
 nav ul li a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 /* Tablets */
-   
-    @media all and (max-width: 800px) {
-        nav {
-            flex-direction: column;
-            align-items: center;
-        }
-    }
 
- /* Phones */
- @media all and (max-width: 600px) {
-    nav {
-        flex-direction: column;
-        align-items: center;
-    }
-    nav ul {
-        width: 100%;
-        flex-direction: column;
-        align-items: stretch;
-    }
-    nav ul li {
-        text-align: center;
-    }
-nav {
-    justify-content: flex-start;
-}
-nav ul {
-    justify-content: space-between;
-}
+@media all and (max-width: 800px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-.footer {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #333333;
-    color: white;
+/* Phones */
+@media all and (max-width: 600px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+  nav ul {
+    width: 100%;
+    flex-direction: column;
+    align-items: stretch;
+  }
+  nav ul li {
     text-align: center;
-    padding: 24px;
+  }
+  nav {
+    justify-content: flex-start;
+  }
+  nav ul {
+    justify-content: space-between;
+  }
+}
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 450px;
+  background-image: url(//unsplash.it/900/450/?bur);
+  background-size: cover;
+  background-color: #333333;
+  text-align: center;
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+    top: -100px;
+  }
+  to {
+    opacity: 1;
+    top: 0;
+  }
+}
+.banner .heading {
+  flex: 1;
+  justify-content: center;
+  color: white;
+  font-size: 3rem;
+  font-weight: bold;
+  position: relative;
+  animation: appear 1s ease-in-out 0s forwards;
+}
+.banner .heading small {
+  font-size: 24px;
+}
+.maintext {
+  font-size: 18px;
+  padding: 12px;
+  margin-top: 0rem;
+}
+.subtext {
+  display: flex;
+  margin-top: 60rem;
+}
+.subtext div {
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+  color: white;
+}
+.subtext .red {
+  background-color: red;
+}
+.subtext .blue {
+  background-color: blue;
+}
+.subtext .yellow {
+  background-color: yellow;
+}
+.quote {
+  display: ;
+}
+.quote {
+  display: block;
+  background-color: #eeeeee;
+  padding: 50px;
+  text-align: center;
+  font-size: italic;
+}
+.quote ::before {
+  display: inline-block;
+  content: open-quote;
+  color: #d3d3d3;
+  font-size: 32px;
+}
+.quote ::after {
+  display: inline-block;
+  content: close-quote;
+  color: #d3d3d3;
+  font-size: 32px;
+}
+/*projects */
+h3.title {
+  font-size: 24px;
+  padding: 12px;
+  margin: 6px;
+  border-top: 5px solid #ddd;
+  border-bottom: 5px solid #ddd;
+}
+/* gallery */
+.charset {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 8px;
+  padding: 12px;
+}
+.gallery-iteam {
+  width: 100%;
+  height: 100%;
+  transition: all 0.25s ease-in;
+}
+.gallery-iteam:hover {
+  transform: scale(0.95);
+}
+.gallery-iteam img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery-iteam-1 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.gallery-iteam-2 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.gallery-iteam-3 {
+  grid-column: 3/5;
+  grid-row: 1/3;
+}
+.gallery-iteam-4 {
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+.gallery-iteam-5 {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+.gallery-iteam-6 {
+  grid-column: 4/5;
+  grid-row: 3/4;
+}
+/* Contacts */
+.container
+{
+    display: flex;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 10px 0px;
+}
+.container form {
+}
+input[type="text"], select, textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    height: 50px;
+}
+input[type=submit]
+{
+    background-color: #45a049;
+   
+}
+
+input[type=submit]:hover
+{
+    background-color: #45a049;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  padding: 24px;
 }
